Fix profile popups being invisible

--- a/config/pywal-discord-default.css
+++ b/config/pywal-discord-default.css
@@ -457,3 +457,7 @@ html body div#app-mount.appMount-3lHmkl {
     inset 0 0 0 3px var(--background-secondary);
   box-shadow: inset 0 0 0 2px var(--foreground), inset 0 0 0 3px;
 }
+
+.flex-1xMQg5.flex-1O1GKY.vertical-V37hAW.flex-1O1GKY.directionColumn-35P_nr.justifyCenter-3D2jYp.alignCenter-1dQNNs.noWrap-3jynv6.headerTop-3C2Zn0 {
+  background: var(--background-secondary);
+}
